# raincast-weather-forecast

./: .gitignore  Containerfile-fastapi  Containerfile-streamlit  README.md  pyproject.toml  run.sh  weather-app-compose.yml
api/: main.py
conf/: config.yaml
frontend/: streamlit.py
images/: TLSTM.html
src/: api_client.py  data_preprocessor.py  feature_engineer.py  forecast.py  general_utils.py  inference.py  model.py  train.py
tests/: test_feature_engineer.py
