[project]
name = "assignment6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
containerfilefastapi = [
    "torch>=2.7.1",
]
data = [
    "matplotlib>=3.10.3",
    "missingno>=0.5.2",
    "nbformat>=5.10.4",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "pyampute>=0.0.3",
    "pytorch-forecasting>=1.4.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "tensorflow>=2.19.0",
]
dev = [
    "darts>=0.36.0",
    "ipykernel>=6.29.5",
    "mlflow-skinny==2.21.3",
    "pytest>=8.4.1",
]
inference = [
    "altair[all]>=5.5.0",
    "fastapi[standard]>=0.116.1",
    "streamlit>=1.47.0",
    "pandas>=2.3.0",
]
training = [
    "hydra-core==1.3.2",
    "hydra-optuna-sweeper==1.2.0",
    "omegaconf>=2.3.0",
    "python-json-logger==3.3.0",
    "jsonlines==4.0.0",
    "psutil==7.0.0",
]
